# Nexa

./: CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json
src/: App.svelte  app.css  index.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/api/: gemini.rs
src-tauri/src/llm/: base.rs  commands.rs  constants.rs  gemini.rs  mod.rs  ollama.rs
src-tauri/src/mcp/: client.rs  commands.rs  connection.rs  manager.rs  mod.rs  structs.rs
src/components/: Chat.svelte  CustomButton.svelte  DropdownMenu.svelte  EdraEditor.svelte  FunctionCallCell.svelte  MessageBox.svelte  ModelSelectionDropdownMenu.svelte  SpinnerBadge.svelte  TiptapEditor.svelte
src/components/TipTapEditor/: CodeBlock.svelte  editor.css  extensionsBundles.ts  index.svelte  markdownParser.ts  utils.ts
src/components/TipTapEditor/extensions/: CodeTagMarkdown.ts  ColorHighlighter.ts  EnterDisabler.ts
src/lib/: constants.ts  type.ts
src/lib/components/edra/: editor.ts  utils.ts
src/lib/components/edra/shadcn/: editor.svelte
src/lib/components/ui/scroll-area/: scroll-area-scrollbar.svelte  scroll-area.svelte
src/lib/stores/: chat-history.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/chat/: +page.svelte
src/routes/config/: +page.svelte
src/routes/config/Sections/: APIKeysSection.svelte  GeneralSection.svelte  index.svelte
src/routes/config/components/: Item.svelte
src/states/: modelState.svelte.ts  ollamaModelState.svelte.ts
src/types/: index.d.ts
