[package]
name = "nexa-sveltekit"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nexa_sveltekit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = { version = "2", features = ["stream", "json"] }
tokio-util = "0.7.14"
bytes = "=1.10.1"
tokio = "1.44.1"
futures-util = "0.3.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-stream = "0.3.6"
tauri-plugin-secure-storage = "1.4.0"
keyring = "3.6.3"
tauri-plugin-store = "2"

[dev-dependencies]
dotenv = "0.15"
